# zerosumfc

./: .gitignore  README.md  main.py  pyproject.toml
src/zerosumfc/: agents.py  battle.py  buckshotroulette.py  cliutils.py  data.py  gptagent.py  minmaxagent.py  textagent.py
tests/: test_buckshotroulette.py  test_data.py  test_minmaxagent.py  test_textagent.py
